==> davecarrijo/QMK_keychron-k8/lib/chibios-contrib/os/hal/ports/SN32/LLD/SN32F2xx/USB/hal_usb_lld.c <==
#include <string.h>
#include "hal.h"

void usb_lld_init(void) {
#if SN32_USB_USE_USB1 == TRUE
    /* Driver initialization.*/
    usbObjectInit(&USBD1);
#endif /* SN32_USB_USE_USB1 == TRUE */
}

void usb_lld_start(USBDriver *usbp) {
  if (usbp->state == USB_STOP) {
    /* Clock activation.*/
#if SN32_USB_USE_USB1
    if (&USBD1 == usbp) {
      /* USB clock enabled.*/
      sys1EnableUSB();
      /* Powers up the transceiver while holding the USB in reset state.*/
      SN32_USB->SGCTL = (mskBUS_DRVEN|mskBUS_J_STATE);
      SN32_USB->CFG = (mskVREG33_EN|mskPHY_EN|mskDPPU_EN|mskSIE_EN|mskESD_EN);
      /* Set up hardware configuration.*/
      SN32_USB->PHYPRM = 0x80000000;
      SN32_USB->PHYPRM2 = 0x00004004;
      /* Enable the USB Bus Interrupts.*/
      SN32_USB->INTEN = mskBUS_IE;

      nvicEnableVector(SN32_USB_NUMBER, SN32_USB_IRQ_PRIORITY);
      /* Releases the reset state.*/
      SN32_USB->SGCTL &= ~mskBUS_DRVEN;
    }
#endif /* SN32_USB_USE_USB1 == TRUE */
    /* Reset procedure enforced on driver start.*/
    usb_lld_reset(usbp);
  }
}

void usb_lld_stop(USBDriver *usbp) {
  /* If in ready state then disables the USB clock.*/
  if (usbp->state != USB_STOP) {
#if SN32_USB_USE_USB1 == TRUE
    /* Disables the peripheral.*/
    if (&USBD1 == usbp) {
        nvicDisableVector(SN32_USB_NUMBER);
        sys1DisableUSB();
    }
#endif /* SN32_USB_USE_USB1 == TRUE */
  }
}

void usb_lld_reset(USBDriver *usbp) {
    /* Post reset initialization.*/
    SN32_USB->INSTSC = (0xFFFFFFFF);

    /* Set the address to zero during enumeration.*/
    usbp->address = 0;
    SN32_USB->ADDR  = 0;

    /* Resets the packet memory allocator.*/
    usb_pm_reset(usbp);

    /* EP0 initialization.*/
    usbp->epc[0] = &ep0config;
    usb_lld_init_endpoint(usbp, 0);

    /* Enable other interrupts.*/
    SN32_USB->INTEN |= (mskUSB_IE|mskEPnACK_EN|mskBUSWK_IE|mskUSB_SOF_IE);
    SN32_USB->INTEN |= (mskEP1_NAK_EN|mskEP2_NAK_EN|mskEP3_NAK_EN|mskEP4_NAK_EN);
#if (USB_ENDPOINTS_NUMBER > 4)
    SN32_USB->INTEN |= (mskEP5_NAK_EN|mskEP6_NAK_EN);
#endif /* (USB_ENDPOINTS_NUMBER > 4) */

}

void usb_lld_set_address(USBDriver *usbp) {

    SN32_USB->ADDR = usbp->address & 0x7F;
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
    const USBEndpointConfig *epcp = usbp->epc[ep];

    /* Make sure direction flags are not set.*/
    if(ep > 0 && ep <= USB_MAX_ENDPOINTS) {
        SN32_USB->CFG &= ~mskEPn_DIR(ep);
    }

    /* Set the endpoint type. */
    switch (epcp->ep_mode & USB_EP_MODE_TYPE) {
        case USB_EP_MODE_TYPE_ISOC:
            break;
        case USB_EP_MODE_TYPE_BULK:
            break;
        case USB_EP_MODE_TYPE_INTR:
            break;
        default:
            break;
    }

    /* IN endpoint? */
    if (epcp->in_state != NULL) {
        if(ep ==0) {
            usb_lld_stall_in(usbp, 0);
        }
        else if(ep <= USB_MAX_ENDPOINTS) {
            /* Set endpoint PMA buffer offset in USB configuration register.*/
            uint32_t buff_addr = usb_pm_alloc(usbp, epcp->in_maxsize);
            USB_SET_BUFFER_OFST(ep,buff_addr);
        }
    }

    /* OUT endpoint? */
    if (epcp->out_state != NULL) {
        if(ep ==0) {
            usb_lld_stall_out(usbp, 0);
        }
        else if(ep <= USB_MAX_ENDPOINTS) {
            /* Set endpoint direction flag in USB configuration register.*/
            SN32_USB->CFG |= mskEPn_DIR(ep);
            /* Set endpoint PMA buffer offset in USB configuration register.*/
            uint32_t buff_addr = usb_pm_alloc(usbp, epcp->out_maxsize);
            USB_SET_BUFFER_OFST(ep,buff_addr);
        }
    }

    /* Enable endpoint. */
    if(ep <= USB_MAX_ENDPOINTS) {
        SN32_USB->EPCTL[ep] |= mskEPn_ENDP_EN;
    }
}

void usb_lld_disable_endpoints(USBDriver *usbp) {

    /* Resets the packet memory allocator.*/
    usb_pm_reset(usbp);

    /* Disabling all endpoints.*/
    for(usbep_t ep=1; ep <= USB_MAX_ENDPOINTS; ep++) {
        SN32_USB->EPCTL[ep] = 0;
        SN32_USB->CFG &= ~mskEPn_DIR(ep);
    }
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_EN) != mskEPn_ENDP_EN)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE) == mskEPn_ENDP_STATE_STALL)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_EN) != mskEPn_ENDP_EN)
        return EP_STATUS_DISABLED;
    if ((SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE) == mskEPn_ENDP_STATE_STALL)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep)
{
    size_t n;
    USBInEndpointState *isp = usbp->epc[ep]->in_state;

    /* Transfer initialization.*/
    n = isp->txsize;

    if((n >= 0) || (ep == 0)) {

        if (n > (size_t)usbp->epc[ep]->in_maxsize)
            n = (size_t)usbp->epc[ep]->in_maxsize;

        isp->txlast = n;
        osalSysLockFromISR();
        sn32_usb_write_fifo(ep, isp->txbuf, n, false);
        osalSysUnlockFromISR();
        nakcnt[ep] = 1;
        EPCTL_SET_STAT_ACK(ep, n);
    }
    else {
        _usb_isr_invoke_in_cb(usbp, ep);
    }
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep == 0 ) {
        if (SN32_USB->INSTS & mskEP0_PRESETUP) {
            return;
        }
        if (SN32_USB->INSTS & mskEP0_OUT_STALL) {
            SN32_USB->EPCTL[ep] |= mskEP0_OUT_STALL_EN;
            return;
        }
    }
    EPCTL_SET_STAT_STALL(ep);
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    if (ep == 0 ) {
        if (SN32_USB->INSTS & mskEP0_PRESETUP) {
            return;
        }
        if (SN32_USB->INSTS & mskEP0_IN_STALL) {
            SN32_USB->EPCTL[ep] |= mskEP0_IN_STALL_EN;
            return;
        }
    }
    EPCTL_SET_STAT_STALL(ep);
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    /* Makes sure to not put to NAK an endpoint that is already
       transferring.*/
    if (!(SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE_NAK))
        EPCTL_SET_STAT_NAK(ep);
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {
    (void)usbp;
    /* Makes sure to not put to NAK an endpoint that is already
       transferring.*/
    if (!(SN32_USB->EPCTL[ep] & mskEPn_ENDP_STATE_NAK))
        EPCTL_SET_STAT_NAK(ep);
}
